--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EventList"></activity>
+        <activity android:name=".TedxActivity"></activity>
+        <activity android:name=".EventList" />
         <activity android:name=".aboutSarasva" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:hardwareAccelerated="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
