--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,13 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
+        android:icon="@drawable/sarasva"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CoordinatorsActivity"></activity>
+        <activity android:name=".TeamActivity"></activity>
+        <activity android:name=".CoordinatorsActivity" />
         <activity android:name=".TedxActivity" />
         <activity android:name=".EventList" />
         <activity android:name=".aboutSarasva" />
