--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TeamActivity"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".BlogingActivity" />
+        <activity android:name=".TeamActivity" />
         <activity android:name=".CoordinatorsActivity" />
         <activity android:name=".TedxActivity" />
         <activity android:name=".EventList" />
